gcc/testsuite/gcc.dg/cpp/if-6.c
/* { dg-do preprocess } */
#ifdef foo bar  /* { dg-error "extra tokens" "tokens after #ifdef" } */
#endif
